--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+ app.testProp=Property of test Update
